# django-miniproj

./: .coverage  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
hospital/: admin.py  models.py  serializers.py  views.py
hospital/migrations/: 0002_hospitalmodel_created_hospitalmodel_is_deleted_and_more.py
miniproj/: asgi.py  constants.py  consumer.py  producer.py  settings.py  urls.py  wsgi.py
miniproj/api/: tests.py
miniproj/api/hospital/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
miniproj/api/hospital/migrations/: 0001_initial.py  0003_rename_hospitalmodel_hospital.py  0004_alter_hospital_options.py  0005_alter_hospital_options.py  0006_auto_20220401_0159.py  0007_auto_20220407_0713.py  0008_auto_20220623_1022.py
miniproj/api/lab_storage/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
miniproj/api/lab_storage/migrations/: 0001_initial.py  0002_labstorage_orders.py  0003_remove_labstorage_orders.py  0004_labstorage_orders.py  0005_auto_20220407_0739.py  0006_alter_labstorage_name.py  0007_alter_labstorage_orders.py  0008_auto_20220623_1022.py
miniproj/api/order/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
miniproj/api/patient/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
miniproj/api/physician/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
miniproj/api/sample/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
mpapi/: .models.py.swp  apps.py  models.py
(+20 files in other folders)
